kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portafolio-svc
  namespace: web
  labels:
    app: portafolio
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: portafolio
