kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portafolio-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - portafolio.bgma.tech
      secretName: api-testing.dynamo-mobile-tls
  rules:
  - host: portafolio.bgma.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portafolio-svc
            port:
              number: 80
